sort.basic.lessons.sort.basic.cocktail.AlgCocktailSort2.scala.error
AlgCocktailSort2:3: error: not found: value d
var b:Boolean=false; d=0 ;f=getNombreValeurs()-2
                     ^AlgCocktailSort2:3: error: not found: value f
var b:Boolean=false; d=0 ;f=getNombreValeurs()-2
                          ^AlgCocktailSort2:8: error: not found: value d
 for(i<-d to f) {
        ^AlgCocktailSort2:13: error: not found: value f
	 f=f-1 
         ^AlgCocktailSort2:14: error: not found: value f
	for(i<- f to d by -1){
                ^AlgCocktailSort2:19: error: not found: value d
	 d=d+1
         ^